--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       <td><h1><em>VINAYAK C HOSAMANI</em></h1></td>
       <td><P1><i>Student at<a href="https://www.kletech.ac.in/">  KLE TECHNOLOGICAL UNIVERSITY HUBLI.</a></i></P1>
         <br>
-        <p>I am currently studying Bachelors in Engineering from the same university in electronics and communication(industry intergrated). I do not like the college as such
-      but its ok. Since i got a good group of friends and  classmates. Pls most of the professors are good and
-      approchable.Also the campus is in the heart of the city.  </p></td>
+        <p>I am currently studying Bachelors in Engineering from the same university in electronics and communication(industry intergrated)
+          </p></td>
     </tr>
   </table>
   
